--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pycparser==2.23
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
+pypdf==6.5.0
 python-dotenv==1.2.1
 python-jose==3.5.0
 python-multipart==0.0.21
