--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,26 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
 bcrypt==3.2.2
+certifi==2025.11.12
 cffi==2.0.0
+charset-normalizer==3.4.4
 click==8.3.1
 ecdsa==0.19.1
+faiss-cpu==1.13.2
 fastapi==0.127.0
+filelock==3.20.1
+fsspec==2025.12.0
 h11==0.16.0
+hf-xet==1.2.0
+huggingface-hub==0.36.0
 idna==3.11
+Jinja2==3.1.6
+joblib==1.5.3
+MarkupSafe==3.0.3
+mpmath==1.3.0
+networkx==3.6.1
+numpy==2.4.0
+packaging==25.0
 passlib==1.7.4
 pyasn1==0.6.1
 pycparser==2.23
@@ -18,9 +32,24 @@ pypdf==6.5.0
 python-dotenv==1.2.1
 python-jose==3.5.0
 python-multipart==0.0.21
+PyYAML==6.0.3
+regex==2025.11.3
+requests==2.32.5
 rsa==4.9.1
+safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.16.3
+sentence-transformers==5.2.0
+setuptools==80.9.0
 six==1.17.0
 starlette==0.50.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.22.1
+torch==2.9.1
+tqdm==4.67.1
+transformers==4.57.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+urllib3==2.6.2
 uvicorn==0.40.0
