--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,17 @@ certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
+distro==1.9.0
 ecdsa==0.19.1
 faiss-cpu==1.13.2
 fastapi==0.127.0
 filelock==3.20.1
 fsspec==2025.12.0
+groq==1.0.0
 h11==0.16.0
 hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
 huggingface-hub==0.36.0
 idna==3.11
 Jinja2==3.1.6
@@ -42,6 +46,7 @@ scipy==1.16.3
 sentence-transformers==5.2.0
 setuptools==80.9.0
 six==1.17.0
+sniffio==1.3.1
 starlette==0.50.0
 sympy==1.14.0
 threadpoolctl==3.6.0
